[workspace]
members = ["lib/*"]
resolver = "3"

default-members = [
        "lib/*",
]

[workspace.package]
categories = [
        "no-std",
        "os",
]
edition = "2024"
homepage = "https://www.bus1.eu"
license = "MIT OR Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
repository = "https://github.com/bus1/sys"
rust-version = "1.85"

[workspace.dependencies]
libc = { default-features = false, version = "0.2.172" }
osi = { path = "./lib/osi", version = "0.0.1" }
sys = { path = "./lib/sys", version = "0.0.1" }

[workspace.lints.clippy]
identity_op = "allow"
redundant_field_names = "allow"
should_implement_trait = "allow"
type_complexity = "allow"
