[workspace]
members = [
        "lib/osi",
        "lib/sys",
        "lib/tmp",
]
resolver = "2"

default-members = [
        "lib/osi",
        "lib/sys",
        "lib/tmp",
]

[workspace.package]
categories = [
        "no-std",
        "os",
]
edition = "2021"
homepage = "https://www.bus1.eu"
license = "MIT OR Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
repository = "https://github.com/bus1/sys"
rust-version = "1.84"

[workspace.dependencies]
libc = { default-features = false, version = "0.2.175" }
osi = { path = "./lib/osi", version = "1.0.0" }
sys = { path = "./lib/sys", version = "1.0.0" }
tmp = { path = "./lib/tmp", version = "1.0.0" }
