[workspace]
members = [
        "lib/osi",
        "lib/sys",
        "lib/tmp",
]
resolver = "2"

default-members = [
        "lib/osi",
        "lib/sys",
        "lib/tmp",
]

[workspace.package]
categories = [
        "no-std",
        "os",
]
edition = "2021"
homepage = "https://www.bus1.eu"
license = "MIT OR Apache-2.0 OR LGPL-2.1-or-later"
readme = "README.md"
repository = "https://github.com/bus1/sys"
rust-version = "1.91"

[workspace.dependencies]
libc = { default-features = false, version = "0.2.175" }
osi = { path = "./lib/osi", version = "1.0.0" }
sys = { path = "./lib/sys", version = "1.0.0" }
tmp = { path = "./lib/tmp", version = "1.0.0" }

[workspace.lints.clippy]
assertions_on_constants = "allow"
explicit_auto_deref = "allow"
identity_op = "allow"
inherent_to_string_shadow_display = "allow"
len_zero = "allow"
manual_range_contains = "allow"
needless_late_init = "allow"
new_without_default = "allow"
should_implement_trait = "allow"
redundant_field_names = "allow"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
        "cfg(polonius)"
]
