[package]
name = "nostd"
version = "0.0.1"

description = "Capability-based Standard Interfaces"
keywords = [
        "capability based",
        "cross platform",
        "standard interfaces",
]

categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
std = []
