[package]
name = "osi"
version = "1.0.0"

description = "Capability-based Standard Interfaces"
keywords = [
        "capability-based",
        "cross-platform",
        "interfaces",
        "library",
        "standard",
]

categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
std = []

[lints]
workspace = true
