[package]
name = "sys"
version = "0.0.1"

description = "Capability-based System Interfaces"
keywords = [
        "capability based",
        "cross platform",
        "system interfaces",
]

categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
std = []

[dependencies]
libc = { optional = true, workspace = true }
osi = { workspace = true }
