[package]
name = "sys"
version = "1.0.0"

description = "Capability-based System Interfaces"
keywords = [
        "capability-based",
        "interfaces",
        "library",
        "syscall",
        "system",
]

categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
libc = ["dep:libc"]
std = []

[dependencies]
libc = { optional = true, workspace = true }
osi = { workspace = true }

[lints]
workspace = true
