[package]
name = "tmp"
version = "1.0.0"

description = "Capability-based Preview Interfaces"
keywords = [
        "capability-based",
        "interfaces",
        "library",
        "syscall",
        "system",
]

categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
polonius = []

[dependencies]
osi = { workspace = true }
sys = { workspace = true }
